<resources>
    <string name="app_name">简账</string>
    <string name="nav_title">简、是一种态度</string>
    <string name="title_activity_login">Sign in</string>
    <string name="home_show_title">添加/编辑</string>
    <string name="status">备注</string>
    <string name="time">日期</string>
    <string name="money">金额</string>
    <string name="type">用途</string>
    <string name="type_2">类型</string>
    <string name="in_or_out">入/出</string>
    <string name="proportion">占比</string>
    <string name="in">收入</string>
    <string name="out">支出</string>
    <string name="save">保存</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="success">保存成功</string>
    <string name="error">保存失败</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="back">返回</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="buy">购物</string>
    <string name="title_simple">月基本信息</string>
    <string name="title_full">月详细信息</string>

    <string name="money_hint">单位：人民币</string>
    <string name="status_hint">比如：双11剁手</string>
    <string name="type_hint">比如：购物</string>

    <!--Type类型-->
    <string name="type_buy">购物</string>
    <string name="type_food">餐饮</string>
    <string name="type_money">工资</string>
    <string name="type_bus">交通</string>
    <string name="type_other">其他</string>

    <!--菜单-->
    <string name="home">我的首页</string>
    <string name="manager">账单查询</string>
    <string name="center">个人中心</string>
    <string name="lock">加密设置</string>
    <string name="backup">备份还原</string>
    <string name="about">关于软件</string>

    <!--加密设置-->
    <string name="old_password">输入密码</string>
    <string name="new_password">新的密码</string>
    <string name="password">重复密码</string>

    <string name="file_message">选择保存位置</string>
    <string name="file_message_2">选择还原文件</string>
    <string name="file_name">请输入文件名</string>

    <string name="update_password">修改密码</string>
    <string name="close_password">关闭密码</string>

    <string name="add_type">类型编辑</string>
    <string name="out_excel">数据导出</string>
    <string name="theme">主题更换</string>

    <string name="default_type">默认格式</string>
    <string name="excel_type">Excel格式</string>

    <string name="theme_green">清新绿</string>
    <string name="theme_black">午夜黑</string>
    <string name="theme_purple">高贵紫</string>
    <string name="theme_red">热情红</string>

    <!--注册 提示-->
    <string name="re_code_show">是不是木有邀请码</string>
    <string name="re_username_show">别调皮，用户名是空的</string>
    <string name="re_password_show">别调皮，密码是空的</string>
    <string name="re_passwords_show">两次密码要一样哟</string>
    <string name="re_phone_show">哎呀，电话不能忘</string>
    <string name="re_email_show">是不是忘了输入邮箱了</string>
    <string name="re_success_show">注册成功,带你登录去</string>
    <string name="re_fail_show">抱歉,服务器可能抽风了</string>
    <string name="re_error_code_show">亲，邀请码不存在哦</string>
    <string name="re_fail_code_show">哦噢，邀请码已被使用了</string>
    <string name="re_error_show">呃呃,用户名已存在</string>

    <string name="re_code_format_fail_show">亲，邀请码6位数哦</string>
    <string name="re_username_format_fail_show">用户名为5到15个字符哦</string>
    <string name="re_password_format_fail_show">为了安全，密码最少6位哦</string>
    <string name="re_password_format_fail2_show">呃呃，密码太长了</string>
    <string name="re_phone_format_fail_show">哎呀，电话号码是不是输错了</string>
    <string name="re_email_format_fail_show">你确定这是邮箱地址吗</string>

    <!--登录 提示-->
    <string name="login_username_show">别调皮，用户名没输入</string>
    <string name="login_password_show">别调皮，密码没输入</string>
    <string name="login_fail_show">很尴尬，用户名或密码错了</string>
    <string name="login_success_show">真激动，登录成功了</string>
    <string name="login_error_show">抱歉,服务器可能抽风了</string>
    <string name="login_no_inter_show">亲，没网络我找不到服务器啊</string>

    <!--个人中心-->
    <string name="center_out_login_show">已退出登录，下次见</string>
    <string name="center_out_fail_show">哦豁，退出失败了</string>
    <string name="center_no_login_show">还没登录呢</string>
    <string name="center_go_login_show">登录后才能替换图片呢</string>
    <string name="center_go2_login_show">未登录，不能使用哦</string>
    <string name="center_edit_show">未登录，请先登录</string>
    <string name="center_no_edit_show">暂不支持修改用户信息</string>

    <!--网络备份-->
    <string name="net_up">备份</string>
    <string name="net_download">还原</string>
    <string name="time_up">最近一次备份</string>
    <string name="time_download">最近一次还原</string>
    <string name="backup_success">数据已安全备份到服务器</string>
    <string name="backup_fail">哦豁，失败了，再试一次</string>

    <!--更新界面-->
    <string name="title_activity_update">您有一条新消息</string>
    <string name="cancel_activity_update">不再提示</string>
    <string name="local_activity_update">当前版本：</string>
    <string name="server_activity_update">最新版本：</string>
    <string name="download_activity_update">下载更新</string>
    <string name="cool_download_activity_update">酷安更新</string>
</resources>
